10/9/2004:	v2.5.4
	- final graphics

6/9/2004:	v2.5.3
	- added new translations
	- preliminary SuSE theme graphics

2/9/2004:	v2.5.2
	- do the F-key-move-down magic only for syslinux (#44238)
	- some text cleanup (9.1 -> 9.2, dropped unused liveeval msgs)
	- integrated new splash picture

18/9/2004:	v2.5.1
	- basic arabic language support

9/8/2004:	v2.5.0
	- add 32/64 dualboot code
	- removed obsolete themes
	- switch to 'installation' if some F-key has been used (#41097)
	- don't offer 640x480; instead, select x11 vesa driver
	- assume monitor can display at least 800x600

2/8/2004:	v2.4.24
	- added SLES-Live theme

9/6/2004	v2.4.23
	- added SuSE-NLD theme

21/5/2004:	v2.4.22
	- new SLES pictures

12/5/2004:	v2.4.21
	- hide password in lilo (#40348)

14/4/2004:	v2.4.20
	- irqs might have been turned off in some cases
	- new SLES pictures

14/4/2004:	v2.4.19
	- font creation missed some chars (#38223)

8/4/2004:	v2.4.18
	- use 'install=slp://' (#36982)
	- add new 'biosmem' function
	- live cd layout changes
	- added live cd warning if there's not enough memory
	- added SLES theme (copy of SuSE theme)

7/4/2004:	v2.4.17
	- add SuSE-Live theme

6/4/2004:	v2.4.16
	- handle case where we can't set graphics mode (#35806)

5/4/2004:	v2.4.15
	- add HTTP install option

5/4/2004:	v2.4.14
	- add only english to boot/message (#38339)

5/4/2004:	v2.4.13
	- japanese translations, again
	- new boot graphics, again

3/4/2004:	v2.4.12
	- new japanese translations (#38224)
	- not all japanese chars were added to font (#38223)

2/4/2004	v2.4.11
	- new boot graphics

2/4/2004:	v2.4.10
	- reset timeout if we show some popup during start

2/4/2004:	v2.4.9
	- added amd64 test
	- fixed lilo password dialog
	- use less memory for input dialogs
	- modplayer should work again
	- added russian texts

31/3/2004:	v2.4.8
	- take out romanian install help text; not enough space

31/3/2004:	v2.4.7
	- swedish texts
	- added japanese texts
	- fixed html viewer to work with japanese (allow line