@@ -1,0 +1,43 @@
+/keymap.nb [
+  [ 0x02 0x31 0x21 0xa1 ]
+  [ 0x03 0x32 0x22 0x40 ]
+  [ 0x04 0x33 0x23 0xa3 ]
+  [ 0x05 0x34 0x24 0xa4 ]
+  [ 0x06 0x35 0x25 0xbd ]
+  [ 0x07 0x36 0x26 0xbe ]
+  [ 0x08 0x37 0x2f 0x7b ]
+  [ 0x09 0x38 0x28 0x5b ]
+  [ 0x0a 0x39 0x29 0x5d ]
+  [ 0x0b 0x30 0x3d 0x7d ]
+  [ 0x0c 0x2b 0x3f 0xb1 ]
+  [ 0x0d 0x5c 0x60 0x00 ]
+  [ 0x0f 0x09 0x09 0x00 ]
+  [ 0x12 0x65 0x45 0xe9 ]
+  [ 0x13 0x72 0x52 0xae ]
+  [ 0x14 0x74 0x54 0xfe ]
+  [ 0x15 0x79 0x59 0xff ]
+  [ 0x16 0x75 0x55 0xfc ]
+  [ 0x17 0x69 0x49 0xef ]
+  [ 0x18 0x6f 0x4f 0xf2 ]
+  [ 0x19 0x70 0x50 0xb6 ]
+  [ 0x1a 0xe5 0xc5 0x7d ]
+  [ 0x1b 0x7e 0x5e 0x00 ]
+  [ 0x1e 0x61 0x41 0xe1 ]
+  [ 0x1f 0x73 0x53 0xdf ]
+  [ 0x20 0x64 0x44 0xf0 ]
+  [ 0x21 0x66 0x46 0xaa ]
+  [ 0x27 0xf8 0xd8 0x7c ]
+  [ 0x28 0xe6 0xc6 0x7b ]
+  [ 0x29 0x7c 0xa7 0xa6 ]
+  [ 0x2b 0x27 0x2a 0x00 ]
+  [ 0x2d 0x78 0x58 0xd7 ]
+  [ 0x2e 0x63 0x43 0xe7 ]
+  [ 0x31 0x6e 0x4e 0xf1 ]
+  [ 0x32 0x6d 0x4d 0xb5 ]
+  [ 0x33 0x2c 0x3b 0xb8 ]
+  [ 0x34 0x2e 0x3a 0xb7 ]
+  [ 0x35 0x2d 0x5f 0xad ]
+  [ 0x39 0x20 0x20 0xa0 ]
+  [ 0x56 0x3c 0x3e 0xab ]
+  [ 0x6f 0x7f 0x7f 0x00 ]
+] def
