@@ -11,6 +11,7 @@ it
 ja
 hu
 nl
+nb
 ro
 ru
 sk
