@@ -1,5 +1,6 @@
-10/9/2004:	v2.5.4
+13/9/2004:	v2.5.4
 	- final graphics
+	- norsk translations
 
 6/9/2004:	v2.5.3
 	- added new translations
